--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.0)
 # SET(CMAKE_INSTALL_PREFIX /usr CACHE PATH "Set install prefix.")
 project(Prelude)
-set(PROJECT_VERSION "0.1.0")
+set(PROJECT_VERSION "0.4.0")
 
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_AUTOMOC ON)
@@ -10,6 +10,6 @@ set(CMAKE_AUTOMOC ON)
 # find_package(ECM 1.0.0 REQUIRED NO_MODULE)
 set(CMAKE_MODULE_PATH  ${CMAKE_CURRENT_SOURCE_DIR}/cmake)
 
-find_package(Qt5 CONFIG REQUIRED COMPONENTS Core Gui Widgets Network Quick QuickControls2 QuickWidgets)
+find_package(Qt5 CONFIG REQUIRED COMPONENTS Core Gui Widgets Network Svg Qml Quick QuickControls2 QuickWidgets)
 
 add_subdirectory(src)
