--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,6 +18,9 @@ tauri-build = { version = "1.0.0-beta.4" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
+anyhow = "1"
+indexmap = "1"
 
 [features]
 default = [ "custom-protocol" ]
