--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,9 +18,23 @@ tauri-build = { version = "1.0.0-beta.4" }
 serde_json = "1.0"
 serde = { version = "1.0", features = ["derive"] }
 tauri = { version = "1.0.0-beta.8", features = ["api-all"] }
-reqwest = { version = "0.11", features = ["json", "stream"] }
 anyhow = "1"
 indexmap = "1"
+axum = { version = "0.3", features = ["mime"] }
+bytes = "*"
+clap = "2"
+md5 = "0.7"
+chrono = "*"
+regex = "*"
+toml = "*"
+futures = "0.3"
+base64 = "0.13"
+directories = "4.0"
+async-stream = "0.3"
+hyper = { version = "0.14", features = ["full"] }
+tokio = { version = "1.14", features = ["full"] }
+reqwest = { version = "0.11", features = ["json", "stream"] }
+librespot = { git = "https://github.com/THMonster/librespot", branch = "tmp" }
 
 [features]
 default = [ "custom-protocol" ]
