--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^0.2.4",
-    "@tauri-apps/api": "^1.0.0-beta.8",
-    "element-plus": "^1.2.0-beta.6",
-    "vue": "^3.2.25",
+    "@tauri-apps/api": "^1.0.0-rc.2",
+    "element-plus": "^2.0.6",
+    "vue": "^3.2.31",
     "vue-router": "4"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.0.0-beta.10",
+    "@tauri-apps/cli": "^1.0.0-rc.7",
     "@vitejs/plugin-vue": "^2.0.0",
     "vite": "^2.7.2"
   }
