--- a/package.json
+++ b/package.json
@@ -1,21 +1,25 @@
 {
   "name": "prelude",
+  "private": true,
   "version": "0.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "build": "vue-tsc --noEmit && vite build",
+    "preview": "vite preview",
+    "tauri": "tauri"
   },
   "dependencies": {
-    "@element-plus/icons-vue": "^0.2.4",
-    "@tauri-apps/api": "^1.0.0-rc.2",
-    "element-plus": "^2.0.6",
-    "vue": "^3.2.31",
-    "vue-router": "4"
+    "@tauri-apps/api": "^1.1.0",
+    "element-plus": "^2.2.17",
+    "vue": "^3.2.37",
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
-    "@tauri-apps/cli": "^1.0.0-rc.7",
-    "@vitejs/plugin-vue": "^2.0.0",
-    "vite": "^2.7.2"
+    "@tauri-apps/cli": "^1.1.1",
+    "@vitejs/plugin-vue": "^3.1.0",
+    "typescript": "^4.6.4",
+    "vite": "^3.1.0",
+    "vue-tsc": "^0.40.4"
   }
 }
